--- a/marketRisk/marketRiskNotes.tex
+++ b/marketRisk/marketRiskNotes.tex
@@ -1,78 +1,68 @@
-\documentclass[12pt]{article}
- 
-\usepackage[margin=1in]{geometry} 
-\usepackage{amsmath,amsthm,amssymb,scrextend}
-\usepackage{fancyhdr}
-\pagestyle{fancy}
+\documentclass[10pt, oneside]{article} 
+\usepackage{amsmath, amsthm, amssymb, calrsfs, wasysym, verbatim, bbm, color, graphics, geometry}
 
-\newcommand{\cont}{\subseteq}
-\usepackage{tikz}
-\usepackage{pgfplots}
-\usepackage{amsmath}
-\usepackage[mathscr]{euscript}
-\let\euscr\mathscr \let\mathscr\relax% just so we can load this and rsfs
-\usepackage[scr]{rsfso}
-\usepackage{amsthm}
-\usepackage{amssymb}
-\usepackage{multicol}
-\usepackage[colorlinks=true, pdfstartview=FitV, linkcolor=blue,
-citecolor=blue, urlcolor=blue]{hyperref}
+\geometry{tmargin=.75in, bmargin=.75in, lmargin=.75in, rmargin = .75in}  
 
-\DeclareMathOperator{\arcsec}{arcsec}
-\DeclareMathOperator{\arccot}{arccot}
-\DeclareMathOperator{\arccsc}{arccsc}
-\newcommand{\ddx}{\frac{d}{dx}}
-\newcommand{\dfdx}{\frac{df}{dx}}
-\newcommand{\ddxp}[1]{\frac{d}{dx}\left( #1 \right)}
-\newcommand{\dydx}{\frac{dy}{dx}}
-\let\ds\displaystyle
-\newcommand{\intx}[1]{\int #1 \, dx}
-\newcommand{\intt}[1]{\int #1 \, dt}
-\newcommand{\defint}[3]{\int_{#1}^{#2} #3 \, dx}
-\newcommand{\imp}{\Rightarrow}
-\newcommand{\un}{\cup}
-\newcommand{\inter}{\cap}
-\newcommand{\ps}{\mathscr{P}}
-\newcommand{\set}[1]{\left\{ #1 \right\}}
-\newtheorem*{sol}{Solution}
-\newtheorem*{claim}{Claim}
-\newtheorem{problem}{Problem}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\Cdot}{\boldsymbol{\cdot}}
+
+\newtheorem{thm}{Theorem}
+\newtheorem{defn}{Definition}
+\newtheorem{conv}{Convention}
+\newtheorem{rem}{Remark}
+\newtheorem{lem}{Lemma}
+\newtheorem{cor}{Corollary}
+
+
+\title{Market Risk}
+\author{Shotiko Abramishvili}
+\date{MAFINRISK}
+
 \begin{document}
- 
-% EVERYTHING ABOVE THIS LINE IS JUST PREABLE, NO NEED TO MESS WITH IT.__________________________________________________________________________________________
-%
 
-\lhead{Shotiko}
-\chead{Market Risk}
-\rhead{Spring 2024}
- 
-% \maketitle
-\section{One Dimensional Black-Scholes model}
-Hi there! Here is a brief introduction to LaTeX. It's a great system for creating beautifully typeset scientific documents. The main difference between LaTeX and your standard word processing program, is that you write code that tells LaTeX what you want it to display and the program creates handles all the little things that make your math look great.
+\maketitle
+\tableofcontents
 
-Lets start with some basics. You can type text normally but when you want to type some math start and end your expression with a \$. For example if I type the Pythagorean Theorem, as long as I surround my equation with dollar signs I get $a^2 +b^2 = c^2$. If I want to emphasize an equation simply put TWO dollar signs around the mathematics. For example a similar expression with two dollar signs around it looks like so: $$x_1^n + x_2^n = x_3^n.$$ (check out the code to see how to generate subscripts!)
+\vspace{.25in}
 
-In LaTeX we use the curly braces, \{ \}, to group things. If we want to raise $e$ to the $42$nd power and we just type it with no grouping we get $e^42$ which is not what we want. Surrounding the $42$ with curly braces gives $e^{42}$.
-
-The really really really great thing about latex is the HUGE library of mathematical symbols, every symbol starts with a $\backslash$, so if I want a nice pi, I just type $\backslash$pi in math mode like so: $\pi$. Want an integral? Try $\backslash$int, want a fraction? Try $\backslash$frac\{a\}\{b\} (this gives $\frac{a}{b}$) Here is a more complicated example:
-$$
-\int_a^b f \left(\frac{x}{2} \right) \ dx =2\left( F\left(\frac{b}{2} \right) - F\left(\frac{a}{2}\right) \right)
-$$
-(those nice sized parenthesis come from using the $\backslash$left( and $\backslash$right) commands). If you are wondering what the latex command for a symbol is, just try and guess it. If that doesn't work, google it!
-
-There are a few little tricks to making your math look nice, one is the align environment which lets you type multiple lines of aligned mathematical expressions. For instance:
-\begin{align*}
-(x^2+y^2)(z^2+w^2) & = (xz)^2 + (yz)^2 + (xw)^2 + (yw)^2 \\
-& =  (xz)^2 + 2wxyz + (yw)^2 + (yz)^2 - 2 wxyz + (xw)^2 \\
-&= (xz+yw)^2 + (yz-xw)^2
-\end{align*}
-here the $\backslash\backslash$ is a line break and the $\&$ is an alignment character. 
-\section{Information and Investment Strategies}
+\section{Intro}
+This section will focus on big picture overview of the course 
+\section{The Repricing Gap Model}
+\subsection{Maturity-adjusted Gap}
+\subsection{Standardized Gap}
+\subsection{Introduction to Behavioral Models}
+\subsection{Marginal and Cumulative Gaps}
 
 
- 
+\section{The Duration Gap Model}
+\subsection{Duration Gap vs Repricing Gap}
+\subsection{Term Structure of Interest Rates}
+\subsection{Principal Component Analysis}
 
+\section{Cash Flow Mapping}
+\section{Internal Transfer Rates}
 
-% THE DOCUMENT IS ESSENTIALLY DONE AT THIS POINT, NO NEED TO EDIT ANYTHING BELOW THIS______________________________________________________________________________________________
- 
+\begin{itemize}
+
+\item The {\bf Hamiltonian formulation}:
+\[ \dot{{\bf x}} = \frac{\partial H}{\partial {\bf p}}, \;\;\;\;\; \dot{{\bf p}} = - \frac{\partial H}{\partial {\bf x}}. \]
+
+\item The {\bf Lagrangian formulation}:
+\[ \delta S[{\bf x}(t)] = 0, \]
+where the {\em action} on the time interval $[t_a, t_b]$ is given by
+\[ S[{\bf x}(t)] := \int_{t_a}^{t_b} \bigg[ \frac{m}{2} \, \dot{{\bf x}}(t)^2 - V({\bf x}(t)) \bigg]  \; dt. \]
+
+\item Etc.
+
+\end{itemize}
+
+\begin{itemize}
+
+\item Newtonian mechanics (i.e., ${\bf F} = m{\bf a}$) is an excellent theory; it applies to the vast majority of human-scale (and even interplanetary-scale) physics. 
+\end{itemize}
+
 \end{document}
